--- a/form.html
+++ b/form.html
@@ -1,4 +1,5 @@
 <form name="">
 	Nombre: <input type="text" name="nombre" maxlenth="30">
 	Documento: <input type="text" name="documento" maxlenth="30">
+	Modificaremos Ok
 </form>
